--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -24,24 +24,25 @@ bind "leftarrow" "buy g3sg1; buy scar20"
 bind "rightarrow" "buy mag7; buy sawedoff"
 
 
-//Basic (Default) Binds
+//Basic (Default) Binds`in
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
-bind "4" "slot4"
-bind "5" "slot5"
+bind "4" "slot5"
+bind "5" ""
 bind "6" "radio"
 bind "7" "radio1"
 bind "8" "radio2"
 bind "9" "radio3"
+bind "f1" "toggle cl_draw_only_deathnotices 0 1"
 bind "a" "+moveleft"
 bind "b" "buymenu"
 bind "c" "slot9"
-bind "d" "+moveright"
+bind "d" "+moveright
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "j" "toggle cl_righthand 0 1" 
+bind "j" "toggle cl_grenadepreview 0 1"
 bind "o" "yeet"
 bind "q" "+jumpthrow"
 bind "r" "+reload"
@@ -51,7 +52,7 @@ bind "u" "voiceon"
 bind "v" "+spray_menu"
 bind "w" "+forward"
 bind "x" "slot10"
-bind "y" "toggle cl_grenadepreview 0 1"
+bind "y" "+jumpthrow"
 bind "z" "slot6"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
@@ -67,8 +68,9 @@ cl_righthand 0
 //Mouse Settings
 alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
 alias "sen2" "sensitivity 2.5; echo "Sensitivity_2.5""
-alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25"".
-sen3
+alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25""
+alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
+sen4
 m_rawinput 1
 m_mouseaccel2 "0" 
 m_mouseaccel1 "0" 
@@ -88,9 +90,10 @@ cl_predictweapons "1"
 alias "64" "cl_cmdrate 64; cl_updaterate 64"
 alias "128" "cl_cmdrate 128; cl_updaterate 128"
 cl_timeout "1337"
+cl_join_advertise "2"
 
 //Video Settings
-fps_max "300" 
+fps_max "400"
 fps_max_menu "245" 
 mat_monitorgamma_tv_enabled "0" 
 mat_powersavingsmode "0" 
@@ -99,7 +102,7 @@ r_dynamic "0"
 alias "stretch" "mat_setvideomode 1280 1024 0"
 alias "normal" "mat_setvideomode 1920 1080 2"
 
-//Sound Settings
+//Sound SettingsS
 dsp_enhance_stereo "0";
 snd_mixahead "0.02";
 snd_pitchquality "1";
@@ -117,6 +120,13 @@ snd_rear_headphone_position "90.0";
 snd_headphone_pan_exponent "1.2";
 snd_headphone_pan_radial_weight "0.5"
 
+//Map Settings
+cl_radar_always_centered "0"
+cl_radar_scale "0.6"
+cl_hud_radar_scale "1.15"
+cl_radar_icon_scale_min "1"
+cl_radar_rotate "1"
+cl_radar_square_with_scoreboard "1"
 
 //Net Graph Only Show When "Tab" Pressed
 net_graphheight 0
@@ -186,6 +196,7 @@ alias aim "map workshop\243702660\aim_botz"
 alias yeet "exec practice"
 alias flick "map workshop\213240871\training_aim_csgo2"
 alias recoil "map workshop\419404847\recoil_mastere"
+alias pistol "map aimtraindriving_sf custom"
 alias "casual" "game_type 0; game_mode 0"
 alias "comp" "game_type 0; game_mode 1"
 alias "wingman" "game_type 0; game_mode 2"
@@ -226,7 +237,8 @@ bind "k" "tarik"
 alias "dot" "toggle cl_crosshairdot 0 1"
 bind "m" "dot"
 alias "simple2" "exec simplev2"
-exec crosshair5
+exec crosshair4
+
 
 
 //Practice Binds
@@ -251,6 +263,7 @@ alias "ex" "exec autoexec"
 bind "F3" "ex"
 alias "disc" "disconnect"
 bind "f9" "say ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽"
+cl_autowepswitch 0 
 
 
 echo "Whats up ladies!!!"
