--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -29,7 +29,7 @@ bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
 bind "4" "slot5"
-bind "5" ""
+bind "5" 
 bind "6" "radio"
 bind "7" "radio1"
 bind "8" "radio2"
@@ -38,29 +38,32 @@ bind "f1" "toggle cl_draw_only_deathnotices 0 1"
 bind "a" "+moveleft"
 bind "b" "buymenu"
 bind "c" "slot9"
-bind "d" "+moveright
+bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "j" "toggle cl_grenadepreview 0 1"
+bind "j" "toggle cl_righthand 0 1"
+bind "l" "crosshairthings1"
 bind "o" "yeet"
 bind "q" "+jumpthrow"
-bind "r" "+reload"
+bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
 bind "t" "cl_sim_grenade_trajectory 10"
 bind "u" "voiceon"
 bind "v" "+spray_menu"
 bind "w" "+forward"
 bind "x" "slot10"
-bind "y" "+jumpthrow"
+bind "y" "toggle cl_grenadepreview 0 1"
 bind "z" "slot6"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
+bind "mouse3" "player_ping"
 bind "MOUSE4" "slot7"
 bind "MOUSE5" "slot8"
-bind "MWHEELUP" "invprev"
-bind "MWHEELDOWN" "invnext"
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
 bind "SPACE" "+jump"
+bind "\" "noclip"
 
 
 cl_righthand 0
@@ -70,7 +73,10 @@ alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
 alias "sen2" "sensitivity 2.5; echo "Sensitivity_2.5""
 alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25""
 alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
-sen4
+alias "sen5" "sensitivity 0.6; echo "Sensitivity_0.6""
+alias "sen6" "sensitivity 0.5; echo "Sensitivity_0.5""
+alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
+sen6
 m_rawinput 1
 m_mouseaccel2 "0" 
 m_mouseaccel1 "0" 
@@ -102,23 +108,34 @@ r_dynamic "0"
 alias "stretch" "mat_setvideomode 1280 1024 0"
 alias "normal" "mat_setvideomode 1920 1080 2"
 
-//Sound SettingsS
-dsp_enhance_stereo "0";
-snd_mixahead "0.02";
+//Sound Settings
+//dsp_enhance_stereo "0";
+//snd_mixahead "0.02";
+//snd_pitchquality "1";
+//snd_deathcamera_volume "0.0";
+//snd_mapobjective_volume "0.12";
+//snd_menumusic_volume "0.0";
+//snd_mvp_volume "0.26";
+//snd_roundend_volume "0.2";
+//snd_roundstart_volume "0.0";
+//snd_tensecondwarning_volume "0.45";
+//voice_scale "0.5";
+//snd_surround_speakers "0"
+//snd_front_headphone_position "53.2";
+//snd_rear_headphone_position "90.0";
+//snd_headphone_pan_exponent "1.2";
+//snd_headphone_pan_radial_weight "0.5"
+
+snd_mixahead "0.04";
+snd_musicvolume "0";
+snd_headphone_pan_exponent "1";
+snd_headphone_pan_radial_weight "0.75";
+snd_legacy_surround "1";
 snd_pitchquality "1";
-snd_deathcamera_volume "0.0";
-snd_mapobjective_volume "0.12";
-snd_menumusic_volume "0.0";
-snd_mvp_volume "0.26";
-snd_roundend_volume "0.2";
-snd_roundstart_volume "0.0";
-snd_tensecondwarning_volume "0.45";
-voice_scale "0.5";
-snd_surround_speakers "0"
-snd_front_headphone_position "53.2";
-snd_rear_headphone_position "90.0";
-snd_headphone_pan_exponent "1.2";
-snd_headphone_pan_radial_weight "0.5"
+dsp_enhance_stereo "1";
+windows_speaker_config "1"
+snd_front_headphone_position "90";
+snd_rear_headphone_position "90;
 
 //Map Settings
 cl_radar_always_centered "0"
@@ -129,14 +146,14 @@ cl_radar_rotate "1"
 cl_radar_square_with_scoreboard "1"
 
 //Net Graph Only Show When "Tab" Pressed
-net_graphheight 0
-alias "+ng" "+showscores; net_graphheight 0"
-alias "-ng" "-showscores; net_graphheight 9999;"
-bind "TAB" "+showscores"
+//net_graphheight 0
+//alias "+ng" "+showscores; net_graphheight 0"
+//alias "-ng" "-showscores; net_graphheight 9999;"
+//bind "TAB" "+showscores"
 //bind "TAB" "+ng"
-alias "neton" "net_graphheight 0; bind PGUP netoff"
-alias "netoff" "net_graphheight 9999; bind PGUP neton"
-bind "PGUP" "neton"
+//alias "neton" "net_graphheight 0; bind PGUP netoff"
+//alias "netoff" "net_graphheight 9999; bind PGUP neton"
+//bind "PGUP" "neton"
 
 
 //Teamchat and Allchat
@@ -167,9 +184,9 @@ bind "INS" "toggle voice_enable 0 1"
 //bind "CAPSLOCK" "defuseon"
 
 //Toggle B-Hop Scroll
-alias bhopscroll "bind MWHEELDOWN +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
-alias weapscroll "bind MWHEELDOWN invnext; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
-bind "MOUSE3" "weapscroll" 
+//alias bhopscroll "bind MWHEELDOWN +jump; bind MWHEELUP +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
+//alias weapscroll "bind MWHEELDOWN invnext; bind MWHEELUP invprev; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
+//bind "MOUSE3" "weapscroll" 
 
 
 //Display Damage Text On Screen
@@ -187,7 +204,7 @@ alias "20s" "sndplaydelay 19 ui/beep07"
 alias "15s" "sndplaydelay 24 buttons/blip2"
 alias "10s" "sndplaydelay 29 buttons/blip2"
 alias "5s" "sndplaydelay 34 ui/beep22"
-alias "bombtimer" "25s;20s;15s;10s;5sf1
+alias "bombtimer" "25s;20s;15s;10s;5s"
 bind "[" "bombtimer"
 
 
@@ -232,12 +249,15 @@ alias "simple" "exec crosshair_S1mple; bind k nothing"
 alias "nothing" "exec crosshair_N0thing; bind k steel"
 alias "steel" "exec crosshair_Steel; bind k jasonr"
 alias "jasonr" "exec crosshair_JasonR; bind k tarik"
-bind "l" "c1"
-bind "k" "tarik"
-alias "dot" "toggle cl_crosshairdot 0 1"
-bind "m" "dot"
+//bind "l" "c1"
+//bind "k" "tarik"
+//alias "dot" "toggle cl_crosshairdot 0 1"
+bind "h" "toggle cl_crosshairsize 1 1000"
+//bind "m" "dot"
 alias "simple2" "exec simplev2"
-exec crosshair4
+alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
+alias "crosshairthings2" "exec crosshair_JasonR; cl_crosshairsize 1; bind l crosshairthings1"
+exec crosshair_JasonR
 
 
 
@@ -253,7 +273,6 @@ bind "'" "toggle sv_showimpacts_penetration 0 1"
 bind "RCTRL" "bot_place"
 bind "RSHIFT" "toggle host_timescale 1.0 4.0"
 bind "RALT" "sv_rethrow_last_grenade"
-bind "y" "toggle cl_grenadepreview 0 1"
 bind "t" "cl_sim_grenade_trajectory 10"
 bind "/" "toggle bot_crouch 0 1"
 
@@ -264,7 +283,7 @@ bind "F3" "ex"
 alias "disc" "disconnect"
 bind "f9" "say ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽"
 cl_autowepswitch 0 
-
+mirv_listentities isPlayer=1
 
 echo "Whats up ladies!!!"
 say "What's Up Ladies!!!"
