--- a/crosshair_JasonR.cfg
+++ b/crosshair_JasonR.cfg
@@ -1,12 +1,12 @@
-cl_crosshairalpha "255"
-cl_crosshaircolor "1"
-cl_crosshairdot "0"
-cl_crosshair_t "0"
-cl_crosshairgap "-3"
-cl_crosshairsize "2"
-cl_crosshairstyle "5"
-cl_crosshairusealpha "1"
-cl_crosshairthickness "0.5"
-cl_fixedcrosshairgap "-7"
-cl_crosshair_outlinethickness "0"
-cl_crosshair_drawoutline "0"
+cl_crosshair_sniper_width 1
+cl_crosshairalpha 255
+cl_crosshaircolor 5
+cl_crosshaircolor_b 255
+cl_crosshaircolor_g 255
+cl_crosshaircolor_r 0
+cl_crosshairdot 0
+cl_crosshairgap -3
+cl_crosshairsize 1.5
+cl_crosshairstyle 4
+cl_crosshairthickness 1
+cl_crosshairusealpha 1
