--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,4 +1,8 @@
 echo "Did anybody say Big Chungus?"
+// old launch options
+//- exec autoexec -novid -w 1280 -h 1024 -windowed -language pirate -noborder -high -threads 6 -nojoy -nod3d9ex1  -console -tickrate 128 -noforcemaccel -noforscemspd
+// new launch options
+// +exec autoexec -novid -high -tickrate 128 -nojoy -refresh 144 -fullscreen -w 1280 -h 1024
 
 //Buy Binds (need a keypad to use these)
 bind "kp_end" "buy decoy"
@@ -124,7 +128,7 @@ alias "normal" "mat_setvideomode 1920 1080 2"
 //snd_front_headphone_position "53.2";
 //snd_rear_headphone_position "90.0";
 //snd_headphone_pan_exponent "1.2";
-//snd_headphone_pan_radial_weight "0.5"
+//snd_headphone_pan_radial_weight "0.5";
 
 snd_mixahead "0.04";
 snd_musicvolume "0";
@@ -147,20 +151,26 @@ cl_radar_square_with_scoreboard "1"
 
 //Net Graph Only Show When "Tab" Pressed
 //net_graphheight 0
-//alias "+ng" "+showscores; net_graphheight 0"
-//alias "-ng" "-showscores; net_graphheight 9999;"
-//bind "TAB" "+showscores"
-//bind "TAB" "+ng"
-//alias "neton" "net_graphheight 0; bind PGUP netoff"
-//alias "netoff" "net_graphheight 9999; bind PGUP neton"
-//bind "PGUP" "neton"
+//alias "+ng" "+showscores; net_graphheight 0";
+//alias "-ng" "-showscores; net_graphheight 9999;";
+//bind "TAB" "+showscores";
+//bind "TAB" "+ng";
+//alias "neton" "net_graphheight 0; bind PGUP netoff";
+//alias "netoff" "net_graphheight 9999; bind PGUP neton";
+//bind "PGUP" "neton";
+
+//Things to Increase FPS
+cl_disablefreezecam 1
+cl_disablehtmlmotd 1
+cl_freezecameffects_showholiday 0
+
 
 
 //Teamchat and Allchat
-alias +walkchat "+speed; bind enter messagemode2"
-alias -walkchat "-speed; bind enter messagemode"
-bind "shift" "+walkchat"
-bind "enter" "messagemode"
+alias +walkchat "+speed; bind enter messagemode2";
+alias -walkchat "-speed; bind enter messagemode";
+bind "shift" "+walkchat";
+bind "enter" "messagemode";
 
 
 //Jumpthrow Bind
@@ -257,7 +267,7 @@ bind "h" "toggle cl_crosshairsize 1 1000"
 alias "simple2" "exec simplev2"
 alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
 alias "crosshairthings2" "exec crosshair_JasonR; cl_crosshairsize 1; bind l crosshairthings1"
-exec crosshair_JasonR
+//exec crosshair_JasonR
 
 
 
