--- a/practice.cfg
+++ b/practice.cfg
@@ -24,7 +24,7 @@ mp_drop_knife_enable "1"
 mp_restart_game 1
 //  ent_fire !self addoutput "health 10000"
 
-
+// CSGO-sSV3Y-e2t44-sbvQf-jfHSa-K2qRP
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
 bind "-" "bot_kick"
