--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -4,36 +4,36 @@ echo "Did anybody say Big Chungus?"
 // new launch options
 // +exec autoexec -novid -high -tickrate 128 -nojoy -refresh 144 -fullscreen -w 1280 -h 1024
 
-//Buy Binds (need a keypad to use these)
-bind "kp_end" "buy decoy"
-bind "kp_downarrow" "buy flashbang"
-bind "kp_pgdn" "buy smokegrenade"
-bind "kp_leftarrow" "buy deagle"
-bind "kp_5" "buy fiveseven; buy tec9; buy cz75"
-bind "kp_rightarrow" "buy p250"
-bind "kp_home" "buy m4a1; buy m4a1-s; buy ak47"
-bind "kp_uparrow" "buy ssg08"
-bind "kp_pgup" "buy awp"
-bind "kp_ins" "buy vest"
-bind "kp_del" "buy vesthelm"
-bind "kp_plus" "buy hegrenade"
-bind "kp_minus" "buy molotov; buy incgrenade"
-bind "kp_enter" "buy defuser"
-bind "numlock" "buy mp9; buy mac10"
-bind "kp_multiply" "buy famas; buy galilar"
-bind "kp_slash" "buy ump45"
-bind "uparrow" "buy mp7"
-bind "downarrow" "buy aug; buy sg556"
-bind "leftarrow" "buy g3sg1; buy scar20"
-bind "rightarrow" "buy mag7; buy sawedoff"
+//Buy Binds need a keypad to use these
+// bind "kp_end" "buy decoy"
+// bind "kp_downarrow" "buy flashbang"
+// bind "kp_pgdn" "buy smokegrenade"
+// bind "kp_leftarrow" "buy deagle"
+// bind "kp_5" "buy fiveseven; buy tec9; buy cz75"
+// bind "kp_rightarrow" "buy p250"
+// bind "kp_home" "buy m4a1; buy m4a1-s; buy ak47"
+// bind "kp_uparrow" "buy ssg08"
+// bind "kp_pgup" "buy awp"
+// bind "kp_ins" "buy vest"
+// bind "kp_del" "buy vesthelm"
+// bind "kp_plus" "buy hegrenade"
+// bind "kp_minus" "buy molotov; buy incgrenade"
+// bind "kp_enter" "buy defuser"
+// bind "numlock" "buy mp9; buy mac10"
+// bind "kp_multiply" "buy famas; buy galilar"
+// bind "kp_slash" "buy ump45"
+// bind "uparrow" "buy mp7"
+// bind "downarrow" "buy aug; buy sg556"
+// bind "leftarrow" "buy g3sg1; buy scar20"
+// bind "rightarrow" "buy mag7; buy sawedoff"
 
 
-//Basic (Default) Binds`in
+//Basic Default Binds
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
 bind "4" "slot5"
-bind "5" 
+bind "5" "slot12"
 bind "6" "radio"
 bind "7" "radio1"
 bind "8" "radio2"
@@ -46,14 +46,14 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "j" "toggle cl_righthand 0 1"
+bind "j" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
 bind "l" "crosshairthings1"
 bind "o" "yeet"
 bind "q" "+jumpthrow"
 bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
 bind "t" "cl_sim_grenade_trajectory 10"
-bind "u" "voiceon"
+// bind "u" "voiceon"
 bind "v" "+spray_menu"
 bind "w" "+forward"
 bind "x" "slot10"
@@ -73,13 +73,14 @@ bind "\" "noclip"
 cl_righthand 0
 
 //Mouse Settings
-alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
-alias "sen2" "sensitivity 2.5; echo "Sensitivity_2.5""
-alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25""
-alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
-alias "sen5" "sensitivity 0.6; echo "Sensitivity_0.6""
-alias "sen6" "sensitivity 0.5; echo "Sensitivity_0.5""
+// alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
+// alias "sen2" "sensitivity 2.5; echo "Sensitivity_2.5""
+// alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25""
+// alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
+// alias "sen5" "sensitivity 0.6; echo "Sensitivity_0.6""
+// alias "sen6" "sensitivity 0.5; echo "Sensitivity_0.5""
 alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
+// alias "sen7" "sensitivity 0.85"
 sen6
 m_rawinput 1
 m_mouseaccel2 "0" 
@@ -109,37 +110,37 @@ mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0" 
 mat_queue_mode "2" 
 r_dynamic "0" 
-alias "stretch" "mat_setvideomode 1280 1024 0"
-alias "normal" "mat_setvideomode 1920 1080 2"
+//alias "stretch" "mat_setvideomode 1280 1024 0"
+//alias "normal" "mat_setvideomode 1920 1080 2"
 
 //Sound Settings
-//dsp_enhance_stereo "0";
-//snd_mixahead "0.02";
-//snd_pitchquality "1";
-//snd_deathcamera_volume "0.0";
-//snd_mapobjective_volume "0.12";
-//snd_menumusic_volume "0.0";
-//snd_mvp_volume "0.26";
-//snd_roundend_volume "0.2";
-//snd_roundstart_volume "0.0";
-//snd_tensecondwarning_volume "0.45";
-//voice_scale "0.5";
+//dsp_enhance_stereo "0"
+//snd_mixahead "0.02"
+//snd_pitchquality "1"
+//snd_deathcamera_volume "0.0"
+//snd_mapobjective_volume "0.12"
+//snd_menumusic_volume "0.0"
+//snd_mvp_volume "0.26"
+//snd_roundend_volume "0.2"
+//snd_roundstart_volume "0.0"
+//snd_tensecondwarning_volume "0.45"
+//voice_scale "0.5"
 //snd_surround_speakers "0"
-//snd_front_headphone_position "53.2";
-//snd_rear_headphone_position "90.0";
-//snd_headphone_pan_exponent "1.2";
-//snd_headphone_pan_radial_weight "0.5";
+//snd_front_headphone_position "53.2"
+//snd_rear_headphone_position "90.0"
+//snd_headphone_pan_exponent "1.2"
+//snd_headphone_pan_radial_weight "0.5"
 
-snd_mixahead "0.04";
-snd_musicvolume "0";
-snd_headphone_pan_exponent "1";
-snd_headphone_pan_radial_weight "0.75";
-snd_legacy_surround "1";
-snd_pitchquality "1";
-dsp_enhance_stereo "1";
+snd_mixahead "0.04"
+snd_musicvolume "0"
+snd_headphone_pan_exponent "1"
+snd_headphone_pan_radial_weight "0.75"
+snd_legacy_surround "1"
+snd_pitchquality "1"
+dsp_enhance_stereo "1"
 windows_speaker_config "1"
-snd_front_headphone_position "90";
-snd_rear_headphone_position "90;
+snd_front_headphone_position "90"
+snd_rear_headphone_position "90
 
 //Map Settings
 cl_radar_always_centered "0"
@@ -163,7 +164,6 @@ cl_radar_square_with_scoreboard "1"
 cl_disablefreezecam 1
 cl_disablehtmlmotd 1
 cl_freezecameffects_showholiday 0
-
 
 
 //Teamchat and Allchat
@@ -207,15 +207,16 @@ alias showdamage "con_filter_text Damage"
 showdamage
 con_filter_text_out Player:
 
+//Cum Bind
 
 //Bomb Timer Bind:
-alias "25s" "sndplaydelay 14 ui/beep07; echo 25 seconds"
-alias "20s" "sndplaydelay 19 ui/beep07"
-alias "15s" "sndplaydelay 24 buttons/blip2"
-alias "10s" "sndplaydelay 29 buttons/blip2"
-alias "5s" "sndplaydelay 34 ui/beep22"
-alias "bombtimer" "25s;20s;15s;10s;5s"
-bind "[" "bombtimer"
+// alias "25s" "sndplaydelay 14 ui/beep07; echo 25 seconds"
+// alias "20s" "sndplaydelay 19 ui/beep07"
+// alias "15s" "sndplaydelay 24 buttons/blip2"
+// alias "10s" "sndplaydelay 29 buttons/blip2"
+// alias "5s" "sndplaydelay 34 ui/beep22"
+// alias "bombtimer" "25s;20s;15s;10s;5s"
+// bind "[" "bombtimer"
 
 
 //Map Aliases/Settings
@@ -244,30 +245,49 @@ alias "inferno" "map de_inferno"
 
 
 //Crosshair Stuff
-alias "c1" "exec crosshair1; bind l c2"
-alias "c2" "exec crosshair2; bind l c3"
-alias "c3" "exec crosshair3; bind l c4"
-alias "c4" "exec crosshair4; bind l c5"
-alias "c5" "exec crosshair5, bind l onlydot"
-alias "onlydot" "exec dotcrosshair; bind l c1" 
-alias "tarik" "exec crosshair_Tarik; bind k boltz"
-alias "boltz" "exec crosshair_Boltz; bind k nifty"
-alias "nifty" "exec crosshair_Nifty; bind k niko"
-alias "niko" "exec crosshair_NiKo; bind k olof"
-alias "olof" "exec crosshair_Olof; bind k simple"
-alias "simple" "exec crosshair_S1mple; bind k nothing"
-alias "nothing" "exec crosshair_N0thing; bind k steel"
-alias "steel" "exec crosshair_Steel; bind k jasonr"
-alias "jasonr" "exec crosshair_JasonR; bind k tarik"
+//alias "c1" "exec crosshair1; bind l c2"
+//alias "c2" "exec crosshair2; bind l c3"
+//alias "c3" "exec crosshair3; bind l c4"
+//alias "c4" "exec crosshair4; bind l c5"
+//alias "c5" "exec crosshair5, bind l onlydot"
+//alias "onlydot" "exec dotcrosshair; bind l c1" 
+//alias "tarik" "exec crosshair_Tarik; bind k boltz"
+// "boltz" "exec crosshair_Boltz; bind k nifty"
+//alias "nifty" "exec crosshair_Nifty; bind k niko"
+//alias "niko" "exec crosshair_NiKo; bind k olof"
+//alias "olof" "exec crosshair_Olof; bind k simple"
+//alias "simple" "exec crosshair_S1mple; bind k nothing"
+//alias "nothing" "exec crosshair_N0thing; bind k steel"
+//alias "steel" "exec crosshair_Steel; bind k jasonr"
+//alias "jasonr" "exec crosshair_JasonR; bind k tarik"
 //bind "l" "c1"
 //bind "k" "tarik"
 //alias "dot" "toggle cl_crosshairdot 0 1"
 bind "h" "toggle cl_crosshairsize 1 1000"
 //bind "m" "dot"
-alias "simple2" "exec simplev2"
-alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
-alias "crosshairthings2" "exec crosshair_JasonR; cl_crosshairsize 1; bind l crosshairthings1"
-//exec crosshair_JasonR
+//alias "simple2" "exec simplev2"
+//alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
+//alias "crosshairthings2" "exec crosshair_JasonR; cl_crosshairsize 1; bind l crosshairthings1"
+//exec crosshair_moddedboombl4
+
+// My current crosshair
+cl_crosshair_drawoutline "0"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
+cl_crosshair_sniper_width "1"
+cl_crosshair_t "0"
+cl_crosshairalpha "255"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "255"
+cl_crosshaircolor_g "210.143723"
+cl_crosshaircolor_r "0.000000"
+cl_crosshairdot "0"
+cl_crosshairgap "-3"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairsize "1"
+cl_crosshairstyle "4"
+cl_crosshairthickness "0"
+cl_crosshairusealpha "1"
 
 
 
