Commented and moved binds
Moved all needed binds to left half of keyboard, commented out all unneeded things, integrated practice config into file

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -46,13 +46,15 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "j" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
-bind "l" "crosshairthings1"
+//bind "h" "toggle cl_crosshairsize 1 1000"
+//bind "j" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
+//bind "l" "crosshairthings1"
 bind "o" "yeet"
 bind "q" "+jumpthrow"
 bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
-bind "t" "cl_sim_grenade_trajectory 10"
+//bind "t" "cl_sim_grenade_trajectory 10"
+bind "t" "messagemode"
 // bind "u" "voiceon"
 bind "v" "+spray_menu"
 bind "w" "+forward"
@@ -67,6 +69,10 @@ bind "MOUSE5" "slot8"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 bind "SPACE" "+jump"
+bind "PGUP" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
+//bind "PGDN" ""
+bind "HOME" "toggle cl_crosshairsize 1 1000"
+// bind "END" ""
 bind "\" "noclip"
 
 
@@ -79,9 +85,10 @@ cl_righthand 0
 // alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
 // alias "sen5" "sensitivity 0.6; echo "Sensitivity_0.6""
 // alias "sen6" "sensitivity 0.5; echo "Sensitivity_0.5""
-alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
+// alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
 // alias "sen7" "sensitivity 0.85"
-sen6
+sensitivity 1.0
+zoom_sensitivity_ratio_mouse 0.809103 
 m_rawinput 1
 m_mouseaccel2 "0" 
 m_mouseaccel1 "0" 
@@ -102,6 +109,11 @@ alias "64" "cl_cmdrate 64; cl_updaterate 64"
 alias "128" "cl_cmdrate 128; cl_updaterate 128"
 cl_timeout "1337"
 cl_join_advertise "2"
+
+// Netgraph Stuff
+net_graph 1
+net_graphheight 0
+net_graphproportionalfont 0 
 
 //Video Settings
 fps_max "400"
@@ -173,6 +185,7 @@ bind "shift" "+walkchat";
 bind "enter" "messagemode";
 
 
+
 //Jumpthrow Bind
 alias "+jumpthrow" "+jump;-attack"
 alias "-jumpthrow" "-jump"
@@ -194,9 +207,9 @@ bind "INS" "toggle voice_enable 0 1"
 //bind "CAPSLOCK" "defuseon"
 
 //Toggle B-Hop Scroll
-//alias bhopscroll "bind MWHEELDOWN +jump; bind MWHEELUP +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
-//alias weapscroll "bind MWHEELDOWN invnext; bind MWHEELUP invprev; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
-//bind "MOUSE3" "weapscroll" 
+// alias bhopscroll "bind MWHEELDOWN +jump; bind MWHEELUP +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
+// alias weapscroll "bind MWHEELDOWN invnext; bind MWHEELUP invprev; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
+// bind "MOUSE3" "weapscroll" 
 
 
 //Display Damage Text On Screen
@@ -225,22 +238,22 @@ alias yeet "exec practice"
 alias flick "map workshop\213240871\training_aim_csgo2"
 alias recoil "map workshop\419404847\recoil_mastere"
 alias pistol "map aimtraindriving_sf custom"
-alias "casual" "game_type 0; game_mode 0"
-alias "comp" "game_type 0; game_mode 1"
-alias "wingman" "game_type 0; game_mode 2"
-alias "armsrace" "game_type 1; game_mode 0"
-alias "demolition" "game_type 1; game_mode 1"
-alias "deathmatch" "game_type 1; game_mode 2"
-alias "dangerzone" "game_type 6; game_mode 0"
-alias "custom" "game_type 3; game_mode 0"
-alias "mirage" "map de_mirage"
-alias "cache" "map de_cache"
-alias "dust2" "map de_dust2"
-alias "vertigo" "map de_vertigo"
-alias "train" "map de_train"
-alias "overpass" "map de_overpass"
-alias "nuke" "map de_nuke"
-alias "inferno" "map de_inferno"
+// alias "casual" "game_type 0; game_mode 0"
+// alias "comp" "game_type 0; game_mode 1"
+// alias "wingman" "game_type 0; game_mode 2"
+// alias "armsrace" "game_type 1; game_mode 0"
+// alias "demolition" "game_type 1; game_mode 1"
+// alias "deathmatch" "game_type 1; game_mode 2"
+// alias "dangerzone" "game_type 6; game_mode 0"
+// alias "custom" "game_type 3; game_mode 0"
+// alias "mirage" "map de_mirage"
+// alias "cache" "map de_cache"
+// alias "dust2" "map de_dust2"
+// alias "vertigo" "map de_vertigo"
+// alias "train" "map de_train"
+// alias "overpass" "map de_overpass"
+// alias "nuke" "map de_nuke"
+// alias "inferno" "map de_inferno"
 
 
 
@@ -263,7 +276,6 @@ alias "inferno" "map de_inferno"
 //bind "l" "c1"
 //bind "k" "tarik"
 //alias "dot" "toggle cl_crosshairdot 0 1"
-bind "h" "toggle cl_crosshairsize 1 1000"
 //bind "m" "dot"
 //alias "simple2" "exec simplev2"
 //alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
@@ -290,6 +302,8 @@ cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
 
 
+//Practice Commands
+alias "practice" "sv_cheats "1"; mp_limitteams "0"; mp_autoteambalance "0"; mp_roundtime "60"; mp_roundtime_defuse "60"; mp_roundtime_hostage "60"; mp_maxmoney "60000"; mp_startmoney "60000"; mp_freezetime "0"; mp_buytime "9999"; mp_buy_anywhere "1"; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo "1"; ammo_grenade_limit_total "5"; mp_warmup_end; sv_grenade_trajectory "1"; sv_grenade_trajectory_time "10"; sv_grenade_trajectory_dash "1"; sv_grenade_trajectory_thickness 1; sv_showimpacts "0"; sv_showimpacts_time "10"; mp_drop_knife_enable "0"; mp_restartgame 1"
 
 //Practice Binds
 bind "," "bot_add_t"
