Changed yeet alias
Changed yeet from "exec practice" to "practice", so it runs the commands within this file and not practice.cfg

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -234,7 +234,8 @@ con_filter_text_out Player:
 
 //Map Aliases/Settings
 alias aim "map workshop\243702660\aim_botz"
-alias yeet "exec practice"
+// alias yeet "exec practice"
+alias yeet "practice"
 alias flick "map workshop\213240871\training_aim_csgo2"
 alias recoil "map workshop\419404847\recoil_mastere"
 alias pistol "map aimtraindriving_sf custom"
