--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -231,11 +231,27 @@ con_filter_text_out Player:
 // alias "bombtimer" "25s;20s;15s;10s;5s"
 // bind "[" "bombtimer"
 
+//Practice Commands
+//alias yeet "sv_cheats 1; mp_limitteams 0; mp_autoteambalance 0; mp_roundtime 60; mp_roundtime_defuse 60; mp_roundtime_hostage 60; mp_maxmoney 60000; mp_startmoney 60000; mp_freezetime 0; mp_buytime 9999; mp_buy_anywhere 1; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo 1; ammo_grenade_limit_total 5; mp_warmup_end; sv_grenade_trajectory 1; sv_grenade_trajectory_time 10; sv_grenade_trajectory_dash 1; sv_grenade_trajectory_thickness 1; sv_showimpacts 0; sv_showimpacts_time 10; mp_drop_knife_enable 0; mp_restartgame 1"
+
+//Practice Binds
+bind "," "bot_add_t"
+bind "." "bot_add_ct"
+bind "-" "bot_kick"
+bind "]" "toggle bot_stop 0 1"
+bind "\" "noclip"
+alias "impacts" "toggle sv_showimpacts 0 1"
+bind "n" "impacts"
+bind "'" "toggle sv_showimpacts_penetration 0 1"
+bind "RCTRL" "bot_place"
+bind "RSHIFT" "toggle host_timescale 1.0 4.0"
+bind "RALT" "sv_rethrow_last_grenade"
+bind "t" "cl_sim_grenade_trajectory 10"
+bind "/" "toggle bot_crouch 0 1"
 
 //Map Aliases/Settings
 alias aim "map workshop\243702660\aim_botz"
-// alias yeet "exec practice"
-alias yeet "practice"
+alias yeet "exec practice"
 alias flick "map workshop\213240871\training_aim_csgo2"
 alias recoil "map workshop\419404847\recoil_mastere"
 alias pistol "map aimtraindriving_sf custom"
@@ -255,7 +271,6 @@ alias pistol "map aimtraindriving_sf custom"
 // alias "overpass" "map de_overpass"
 // alias "nuke" "map de_nuke"
 // alias "inferno" "map de_inferno"
-
 
 
 //Crosshair Stuff
@@ -301,26 +316,6 @@ cl_crosshairsize "1"
 cl_crosshairstyle "4"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-
-
-//Practice Commands
-alias "practice" "sv_cheats "1"; mp_limitteams "0"; mp_autoteambalance "0"; mp_roundtime "60"; mp_roundtime_defuse "60"; mp_roundtime_hostage "60"; mp_maxmoney "60000"; mp_startmoney "60000"; mp_freezetime "0"; mp_buytime "9999"; mp_buy_anywhere "1"; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo "1"; ammo_grenade_limit_total "5"; mp_warmup_end; sv_grenade_trajectory "1"; sv_grenade_trajectory_time "10"; sv_grenade_trajectory_dash "1"; sv_grenade_trajectory_thickness 1; sv_showimpacts "0"; sv_showimpacts_time "10"; mp_drop_knife_enable "0"; mp_restartgame 1"
-
-//Practice Binds
-bind "," "bot_add_t"
-bind "." "bot_add_ct"
-bind "-" "bot_kick"
-bind "]" "toggle bot_stop 0 1"
-bind "\" "noclip"
-alias "impacts" "toggle sv_showimpacts 0 1"
-bind "n" "impacts"
-bind "'" "toggle sv_showimpacts_penetration 0 1"
-bind "RCTRL" "bot_place"
-bind "RSHIFT" "toggle host_timescale 1.0 4.0"
-bind "RALT" "sv_rethrow_last_grenade"
-bind "t" "cl_sim_grenade_trajectory 10"
-bind "/" "toggle bot_crouch 0 1"
-
 
 //Other Random Aliases
 alias "ex" "exec autoexec"
