--- a/practice.cfg
+++ b/practice.cfg
@@ -20,9 +20,9 @@ sv_grenade_trajectory_dash "1"
 sv_grenade_trajectory_thickness 1
 sv_showimpacts "0"
 sv_showimpacts_time "10"
-mp_drop_knife_enable "1"
-mp_restart_game 1
-//  ent_fire !self addoutput "health 10000"
+mp_drop_knife_enable "0"
+mp_restartgame 1
+// ent_fire !self addoutput "health 10000"
 
 // CSGO-sSV3Y-e2t44-sbvQf-jfHSa-K2qRP
 bind "," "bot_add_t"
@@ -40,7 +40,7 @@ bind "RALT" "sv_rethrow_last_grenade"
 bind "y" "toggle cl_grenadepreview 0 1"
 bind "t" "cl_sim_grenade_trajectory 10"
 bind "/" "toggle bot_crouch 0 1"
-bind "j" "toggle cl_righthand 0 1"
+// bind "j" "toggle cl_righthand 0 1"
 
 sv_infinite_ammo 1
 
