added new crosshair

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,7 +2,7 @@ echo "Did anybody say Big Chungus?"
 // old launch options
 //- exec autoexec -novid -w 1280 -h 1024 -windowed -language pirate -noborder -high -threads 6 -nojoy -nod3d9ex1  -console -tickrate 128 -noforcemaccel -noforscemspd
 // new launch options
-// +exec autoexec -novid -high -tickrate 128 -nojoy -refresh 144 -fullscreen -w 1280 -h 1024
+// +exec autoexec -novid -high -tickrate 128 -nojoy -refresh 144 -fullscreen -w 1280 -h 1024 -language bananagaming
 
 //Buy Binds need a keypad to use these
 // bind "kp_end" "buy decoy"
@@ -75,8 +75,12 @@ bind "HOME" "toggle cl_crosshairsize 1 1000"
 // bind "END" ""
 bind "\" "noclip"
 
-
+viewmodel_presetpos "3"
 cl_righthand 0
+cl_bob_lower_amt "0"
+cl_bobamt_lat "0"
+cl_bobamt_vert "0"
+cl_viewmodelpreset
 
 //Mouse Settings
 // alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
@@ -183,6 +187,7 @@ alias +walkchat "+speed; bind enter messagemode2";
 alias -walkchat "-speed; bind enter messagemode";
 bind "shift" "+walkchat";
 bind "enter" "messagemode";
+cl_mute_enemy_team 1
 
 
 
@@ -213,12 +218,12 @@ bind "INS" "toggle voice_enable 0 1"
 
 
 //Display Damage Text On Screen
-developer 1
-con_enable 1
-con_filter_enable 2
-alias showdamage "con_filter_text Damage"
-showdamage
-con_filter_text_out Player:
+// developer 1
+// con_enable 1
+// con_filter_enable 2
+// alias showdamage "con_filter_text Damage"
+// showdamage
+// con_filter_text_out Player:
 
 //Cum Bind
 
@@ -299,23 +304,20 @@ alias pistol "map aimtraindriving_sf custom"
 //exec crosshair_moddedboombl4
 
 // My current crosshair
-cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t "0"
-cl_crosshairalpha "255"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "255"
-cl_crosshaircolor_g "210.143723"
-cl_crosshaircolor_r "0.000000"
-cl_crosshairdot "0"
-cl_crosshairgap "-3"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0"
-cl_crosshairusealpha "1"
+
+
+
+
+
+// Demo Aliases
+alias listdudes "mirv_listentities isPlayer=1"
+bind "F5" "+ffw"
+alias "+ffw" "demo_timescale 3"
+alias "-ffw" "demo_timescale 1"
+bind "F6" "+ffw3"
+alias "+ffw3" "demo_timescale 20; volume 0"
+alias "-ffw3" "demo_timescale 1; volume 0.1"
+bind "F7" "demo_togglepause"
 
 //Other Random Aliases
 alias "ex" "exec autoexec"
@@ -328,3 +330,13 @@ mirv_listentities isPlayer=1
 echo "Whats up ladies!!!"
 say "What's Up Ladies!!!"
 host_writeconfig
+
+
+// Other Crosshairs:
+//interz (This is the one that I use): CSGO-mYOzQ-Yy7jO-GRS36-rwFGZ-4fWjM 
+//Old Boombl4: cl_crosshair_drawoutline "0"; cl_crosshair_outlinethickness "1"; cl_crosshair_sniper_show_normal_inaccuracy "0"; cl_crosshair_sniper_width "1"; cl_crosshair_t "0"; cl_crosshairalpha "255"; cl_crosshaircolor "5"; cl_crosshaircolor_b "255"; cl_crosshaircolor_g "210.143723"; cl_crosshaircolor_r "0.000000"; cl_crosshairdot "0"; cl_crosshairgap "-3"; cl_crosshairgap_useweaponvalue "0"; cl_crosshairsize "1"; cl_crosshairstyle "4"; cl_crosshairthickness "0"; cl_crosshairusealpha "1"
+//
+//
+//
+
+
