--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -92,7 +92,8 @@ cl_viewmodelpreset
 // alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
 // alias "sen7" "sensitivity 0.85"
 sensitivity 1.0
-zoom_sensitivity_ratio_mouse 0.809103 
+//zoom_sensitivity_ratio_mouse 0.809103 
+zoom_sensitivity_ratio_mouse 1.0
 m_rawinput 1
 m_mouseaccel2 "0" 
 m_mouseaccel1 "0" 
@@ -187,7 +188,7 @@ alias +walkchat "+speed; bind enter messagemode2";
 alias -walkchat "-speed; bind enter messagemode";
 bind "shift" "+walkchat";
 bind "enter" "messagemode";
-cl_mute_enemy_team 1
+//cl_mute_enemy_team 1
 
 
 
@@ -227,14 +228,14 @@ bind "INS" "toggle voice_enable 0 1"
 
 //Cum Bind
 
-//Bomb Timer Bind:
-// alias "25s" "sndplaydelay 14 ui/beep07; echo 25 seconds"
-// alias "20s" "sndplaydelay 19 ui/beep07"
-// alias "15s" "sndplaydelay 24 buttons/blip2"
-// alias "10s" "sndplaydelay 29 buttons/blip2"
-// alias "5s" "sndplaydelay 34 ui/beep22"
-// alias "bombtimer" "25s;20s;15s;10s;5s"
-// bind "[" "bombtimer"
+Bomb Timer Bind:
+alias "25s" "sndplaydelay 14 ui/beep07"
+alias "20s" "sndplaydelay 19 ui/beep07"
+alias "15s" "sndplaydelay 24 buttons/blip2"
+alias "10s" "sndplaydelay 29 buttons/blip2"
+alias "5s" "sndplaydelay 34 ui/beep22"
+alias "bombtimer" "25s;20s;15s;10s;5s"
+bind "[" "bombtimer"
 
 //Practice Commands
 //alias yeet "sv_cheats 1; mp_limitteams 0; mp_autoteambalance 0; mp_roundtime 60; mp_roundtime_defuse 60; mp_roundtime_hostage 60; mp_maxmoney 60000; mp_startmoney 60000; mp_freezetime 0; mp_buytime 9999; mp_buy_anywhere 1; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo 1; ammo_grenade_limit_total 5; mp_warmup_end; sv_grenade_trajectory 1; sv_grenade_trajectory_time 10; sv_grenade_trajectory_dash 1; sv_grenade_trajectory_thickness 1; sv_showimpacts 0; sv_showimpacts_time 10; mp_drop_knife_enable 0; mp_restartgame 1"
@@ -253,6 +254,7 @@ bind "RSHIFT" "toggle host_timescale 1.0 4.0"
 bind "RALT" "sv_rethrow_last_grenade"
 bind "t" "cl_sim_grenade_trajectory 10"
 bind "/" "toggle bot_crouch 0 1"
+
 
 //Map Aliases/Settings
 alias aim "map workshop\243702660\aim_botz"
