--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,32 +1,14 @@
 echo "Did anybody say Big Chungus?"
+echo "This is the start of the config. If you don't see 'penis cock' below this, something went wrong."
 // old launch options
 //- exec autoexec -novid -w 1280 -h 1024 -windowed -language pirate -noborder -high -threads 6 -nojoy -nod3d9ex1  -console -tickrate 128 -noforcemaccel -noforscemspd
 // new launch options
 // +exec autoexec -novid -high -tickrate 128 -nojoy -refresh 144 -fullscreen -w 1280 -h 1024 -language bananagaming
 
-//Buy Binds need a keypad to use these
-// bind "kp_end" "buy decoy"
-// bind "kp_downarrow" "buy flashbang"
-// bind "kp_pgdn" "buy smokegrenade"
-// bind "kp_leftarrow" "buy deagle"
-// bind "kp_5" "buy fiveseven; buy tec9; buy cz75"
-// bind "kp_rightarrow" "buy p250"
-// bind "kp_home" "buy m4a1; buy m4a1-s; buy ak47"
-// bind "kp_uparrow" "buy ssg08"
-// bind "kp_pgup" "buy awp"
-// bind "kp_ins" "buy vest"
-// bind "kp_del" "buy vesthelm"
-// bind "kp_plus" "buy hegrenade"
-// bind "kp_minus" "buy molotov; buy incgrenade"
-// bind "kp_enter" "buy defuser"
-// bind "numlock" "buy mp9; buy mac10"
-// bind "kp_multiply" "buy famas; buy galilar"
-// bind "kp_slash" "buy ump45"
-// bind "uparrow" "buy mp7"
-// bind "downarrow" "buy aug; buy sg556"
-// bind "leftarrow" "buy g3sg1; buy scar20"
-// bind "rightarrow" "buy mag7; buy sawedoff"
 
+/////////////////////////////////////////////
+////////////////////Binds////////////////////
+/////////////////////////////////////////////
 
 //Basic Default Binds
 bind "1" "slot1"
@@ -38,7 +20,7 @@ bind "6" "radio"
 bind "7" "radio1"
 bind "8" "radio2"
 bind "9" "radio3"
-bind "f1" "toggle cl_draw_only_deathnotices 0 1"
+bind "F4" "toggle cl_draw_only_deathnotices 0 1"
 bind "a" "+moveleft"
 bind "b" "buymenu"
 bind "c" "slot9"
@@ -46,16 +28,19 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-//bind "h" "toggle cl_crosshairsize 1 1000"
-//bind "j" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
-//bind "l" "crosshairthings1"
+bind "h" "say im bringing sexy back (WHAT!!) (Default Dance ensues)"
+bind "j" "say lower case xd moment"
+bind "k" "echo Bound to Nothing"
+bind "l" "echo Bound to Nothing"
+bind "m" "echo Bound to Nothing"
 bind "o" "yeet"
+bind "p" "say i want to smell your kneecaps"
 bind "q" "+jumpthrow"
 bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
-//bind "t" "cl_sim_grenade_trajectory 10"
+bind "t" "echo Bound to Nothing"
 bind "t" "messagemode"
-// bind "u" "voiceon"
+bind "u" "echo Bound to Nothing"
 bind "v" "+spray_menu"
 bind "w" "+forward"
 bind "x" "slot10"
@@ -63,18 +48,100 @@ bind "y" "toggle cl_grenadepreview 0 1"
 bind "z" "slot6"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "mouse3" "player_ping"
+bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot7"
 bind "MOUSE5" "slot8"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 bind "SPACE" "+jump"
+bind "CTRL" "+duck"
+bind "ALT" "+voicerecord"
+bind "ESCAPE" "cancelselect"
 bind "PGUP" "toggle cl_righthand 0 1; playerchatwheel deathcry moan"
-//bind "PGDN" ""
+bind "PGDN" "toggle voice_enable 0 1"
 bind "HOME" "toggle cl_crosshairsize 1 1000"
-// bind "END" ""
+bind "END" "echo Bound to Nothing"
 bind "\" "noclip"
 
+// Setting All Old Buybinds to "Bound To Nothing". Transfer to section above if bound to something
+// Numpad
+bind "KP_INS" "echo Bound to Nothing"
+bind "KP_END" "echo Bound to Nothing"
+bind "KP_DOWNARROW" "echo Bound to Nothing"
+bind "KP_PGDN" "echo Bound to Nothing"
+bind "KP_LEFTARROW" "echo Bound to Nothing"
+bind "KP_5" "echo Bound to Nothing"
+bind "KP_RIGHTARROW" "echo Bound to Nothing"
+bind "KP_HOME" "echo Bound to Nothing"
+bind "KP_UPARROW" "echo Bound to Nothing"
+bind "KP_PGUP" "echo Bound to Nothing"
+bind "KP_SLASH" "echo Bound to Nothing"
+bind "KP_MULTIPLY" "echo Bound to Nothing"
+bind "KP_MINUS" "echo Bound to Nothing"
+bind "KP_PLUS" "echo Bound to Nothing"
+bind "KP_ENTER" "echo Bound to Nothing"
+bind "KP_DEL" "echo Bound to Nothing"
+// Arrow Keys
+bind "UPARROW" "echo Bound to Nothing"
+bind "LEFTARROW" "echo Bound to Nothing"
+bind "DOWNARROW" "echo Bound to Nothing"
+bind "RIGHTARROW" "echo Bound to Nothing"
+
+//Practice Binds
+bind "," "bot_add_t"
+bind "." "bot_add_ct"
+bind "-" "bot_kick"
+bind "]" "toggle bot_stop 0 1"
+bind "\" "noclip"
+bind "n" "toggle sv_showimpacts 0 1"
+bind "'" "toggle sv_showimpacts_penetration 0 1"
+bind "RCTRL" "bot_place"
+bind "RSHIFT" "toggle host_timescale 1.0 4.0"
+bind "RALT" "sv_rethrow_last_grenade"
+bind "t" "cl_sim_grenade_trajectory 10"
+bind "/" "toggle bot_crouch 0 1"
+
+//Teamchat and Allchat
+alias +walkchat "+speed; bind enter messagemode2";
+alias -walkchat "-speed; bind enter messagemode";
+bind "shift" "+walkchat";
+bind "enter" "messagemode";
+//cl_mute_enemy_team 1
+
+//Jumpthrow Bind
+alias "+jumpthrow" "+jump;-attack"
+alias "-jumpthrow" "-jump"
+bind "q" "+jumpthrow"
+
+bind "i" "say What's Up Ladies!!!"
+
+//Toggle Voice On and Off
+//alias voiceon "+voicerecord; bind u voiceoff; echo "Damage Given Voice_Toggle_On""
+//alias voiceoff "-voicerecord; bind u voiceon; echo "Damage Given Voice_Toggle_Off""
+//bind u voiceon
+//bind alt +voicerecord
+
+
+// Demo Aliases
+alias listdudes "mirv_listentities isPlayer=1"
+bind "F5" "+ffw"
+alias "+ffw" "demo_timescale 3"
+alias "-ffw" "demo_timescale 1"
+bind "F6" "+ffw3"
+alias "+ffw3" "demo_timescale 20; volume 0"
+alias "-ffw3" "demo_timescale 1; volume 0.1"
+bind "F7" "demo_togglepause"
+
+//Other Random Aliases
+alias "ex" "exec autoexec"
+bind "F3" "ex"
+alias "disc" "disconnect"
+bind "f9" "say ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽"
+cl_autowepswitch 0 
+mirv_listentities isPlayer=1
+
+
+// Viewmodel Settings
 viewmodel_presetpos "3"
 cl_righthand 0
 cl_bob_lower_amt "0"
@@ -83,14 +150,6 @@ cl_bobamt_vert "0"
 cl_viewmodelpreset
 
 //Mouse Settings
-// alias "sen1" "sensitivity 4.05; echo "Sensitivity_4.05""
-// alias "sen2" "sensitivity 2.5; echo "Sensitivity_2.5""
-// alias "sen3" "sensitivity 1.25; echo "Sensitivity_1.25""
-// alias "sen4" "sensitivity 0.7; echo "Sensitivity__0.7""
-// alias "sen5" "sensitivity 0.6; echo "Sensitivity_0.6""
-// alias "sen6" "sensitivity 0.5; echo "Sensitivity_0.5""
-// alias "sen6" "sensitivity 1.0; echo "Sensitivity_1.0""
-// alias "sen7" "sensitivity 0.85"
 sensitivity 1.0
 //zoom_sensitivity_ratio_mouse 0.809103 
 zoom_sensitivity_ratio_mouse 1.0
@@ -131,6 +190,131 @@ r_dynamic "0"
 //alias "normal" "mat_setvideomode 1920 1080 2"
 
 //Sound Settings
+
+
+snd_musicvolume "0"
+snd_menumusic_volume "0"
+snd_roundend_volume "0"
+snd_roundstart_volume "0"
+snd_deathcamera_volume "0"
+snd_mapobjective_volume "0"
+snd_tensecondwarning_volume "0.24"
+
+snd_mixahead "0.04"
+snd_front_headphone_position "43.2"
+snd_rear_headphone_position "90.0"
+snd_headphone_pan_exponent "2"
+snd_headphone_pan_radial_weight "0.5"
+
+
+//Map Settings
+cl_radar_always_centered "0"
+cl_radar_scale "0.5"
+cl_hud_radar_scale "1.3"
+cl_radar_icon_scale_min "0.8"
+cl_radar_rotate "1"
+cl_radar_square_with_scoreboard "1"
+
+// Other HUD Settings
+hud_showtargetid 1
+hud_scaling 0.8 
+
+// Crosshair Settings
+//exec crosshair_sh1ro
+cl_crosshair_drawoutline "0"
+cl_crosshairalpha "255"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "2"
+cl_crosshaircolor_g "255"
+cl_crosshaircolor_r "255"
+cl_crosshairdot "0"
+cl_crosshairgap "-4.000000"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairsize "1"
+cl_crosshairstyle "4"
+cl_crosshairthickness "0.000000"
+cl_crosshairusealpha "1"
+cl_fixedcrosshairgap "0.000000"
+
+//Things to Increase FPS
+cl_disablefreezecam 1
+cl_disablehtmlmotd 1
+cl_freezecameffects_showholiday 0
+
+//Bomb Timer Bind:
+alias "25s" "sndplaydelay 14 ui/beep07"
+alias "20s" "sndplaydelay 19 ui/beep07"
+alias "15s" "sndplaydelay 24 buttons/blip2"
+alias "10s" "sndplaydelay 29 buttons/blip2"
+alias "5s" "sndplaydelay 34 ui/beep22"
+alias "bombtimer" "25s;20s;15s;10s;5s"
+bind "[" "bombtimer"
+
+//Practice Commands
+//alias yeet "sv_cheats 1; mp_limitteams 0; mp_autoteambalance 0; mp_roundtime 60; mp_roundtime_defuse 60; mp_roundtime_hostage 60; mp_maxmoney 60000; mp_startmoney 60000; mp_freezetime 0; mp_buytime 9999; mp_buy_anywhere 1; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo 1; ammo_grenade_limit_total 5; mp_warmup_end; sv_grenade_trajectory 1; sv_grenade_trajectory_time 10; sv_grenade_trajectory_dash 1; sv_grenade_trajectory_thickness 1; sv_showimpacts 0; sv_showimpacts_time 10; mp_drop_knife_enable 0; mp_restartgame 1"
+
+
+//Map Aliases/Settings
+alias aim "map workshop\243702660\aim_botz"
+alias ypaim "map workshop\1104441138\yprac_arena"
+alias opwu "map workshop\1339439320\yprac_overpass"
+alias mrwu "map workshop\1222094548\yprac_mirage"
+alias ifwu "map workshop\1377592684\yprac_inferno"
+alias nkwu "map workshop\1304331841\yprac_nuke"
+alias yeet "exec practice"
+alias flick "map workshop\213240871\training_aim_csgo2"
+alias recoil "map workshop\419404847\recoil_mastere"
+alias pistol "map aimtraindriving_sf custom"
+
+
+
+echo "Whats up ladies!!!"
+say "What's Up Ladies!!!"
+echo "penis cock"
+echo "shit didn't break!! hooray!!"
+host_writeconfig
+
+// Other Crosshairs:
+//interz (This is the one that I use): CSGO-mYOzQ-Yy7jO-GRS36-rwFGZ-4fWjM 
+//Old Boombl4: cl_crosshair_drawoutline "0"; cl_crosshair_outlinethickness "1"; cl_crosshair_sniper_show_normal_inaccuracy "0"; cl_crosshair_sniper_width "1"; cl_crosshair_t "0"; cl_crosshairalpha "255"; cl_crosshaircolor "5"; cl_crosshaircolor_b "255"; cl_crosshaircolor_g "210.143723"; cl_crosshaircolor_r "0.000000"; cl_crosshairdot "0"; cl_crosshairgap "-3"; cl_crosshairgap_useweaponvalue "0"; cl_crosshairsize "1"; cl_crosshairstyle "4"; cl_crosshairthickness "0"; cl_crosshairusealpha "1"
+//
+//
+//
+
+
+//// Deprecated Things
+
+
+//Net Graph Only Show When "Tab" Pressed
+//net_graphheight 0
+//alias "+ng" "+showscores; net_graphheight 0";
+//alias "-ng" "-showscores; net_graphheight 9999;";
+//bind "TAB" "+showscores";
+//bind "TAB" "+ng";
+//alias "neton" "net_graphheight 0; bind PGUP netoff";
+//alias "netoff" "net_graphheight 9999; bind PGUP neton";
+//bind "PGUP" "neton";
+
+//Toggle Bomb Defuse
+//alias "defuseon" "+use; bind CAPSLOCK defuseoff; echo "Damage Given Defuse_Hold_On""
+//alias "defuseoff" "-use; bind CAPSLOCK defuseon; echo "Damage Given Defuse_Hold_Off""
+//defuseoff
+//bind "CAPSLOCK" "defuseon"
+
+//Toggle B-Hop Scroll
+// alias bhopscroll "bind MWHEELDOWN +jump; bind MWHEELUP +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
+// alias weapscroll "bind MWHEELDOWN invnext; bind MWHEELUP invprev; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
+// bind "MOUSE3" "weapscroll" 
+
+//Display Damage Text On Screen
+// developer 1
+// con_enable 1
+// con_filter_enable 2
+// alias showdamage "con_filter_text Damage"
+// showdamage
+// con_filter_text_out Player:
+
+//////// Old Sound Settings:
 //dsp_enhance_stereo "0"
 //snd_mixahead "0.02"
 //snd_pitchquality "1"
@@ -148,120 +332,18 @@ r_dynamic "0"
 //snd_headphone_pan_exponent "1.2"
 //snd_headphone_pan_radial_weight "0.5"
 
-snd_mixahead "0.04"
-snd_musicvolume "0"
-snd_headphone_pan_exponent "1"
-snd_headphone_pan_radial_weight "0.75"
-snd_legacy_surround "1"
-snd_pitchquality "1"
-dsp_enhance_stereo "1"
-windows_speaker_config "1"
-snd_front_headphone_position "90"
-snd_rear_headphone_position "90
-
-//Map Settings
-cl_radar_always_centered "0"
-cl_radar_scale "0.6"
-cl_hud_radar_scale "1.15"
-cl_radar_icon_scale_min "1"
-cl_radar_rotate "1"
-cl_radar_square_with_scoreboard "1"
-
-//Net Graph Only Show When "Tab" Pressed
-//net_graphheight 0
-//alias "+ng" "+showscores; net_graphheight 0";
-//alias "-ng" "-showscores; net_graphheight 9999;";
-//bind "TAB" "+showscores";
-//bind "TAB" "+ng";
-//alias "neton" "net_graphheight 0; bind PGUP netoff";
-//alias "netoff" "net_graphheight 9999; bind PGUP neton";
-//bind "PGUP" "neton";
-
-//Things to Increase FPS
-cl_disablefreezecam 1
-cl_disablehtmlmotd 1
-cl_freezecameffects_showholiday 0
+/////// Newer Sound Settings:
+// snd_headphone_pan_exponent "1"
+// snd_headphone_pan_radial_weight "0.75"
+// snd_legacy_surround "1"
+// snd_pitchquality "1"
+// dsp_enhance_stereo "1"
+// windows_speaker_config "1"
+// snd_front_headphone_position "90"
+// snd_rear_headphone_position "90
 
 
-//Teamchat and Allchat
-alias +walkchat "+speed; bind enter messagemode2";
-alias -walkchat "-speed; bind enter messagemode";
-bind "shift" "+walkchat";
-bind "enter" "messagemode";
-//cl_mute_enemy_team 1
-
-
-
-//Jumpthrow Bind
-alias "+jumpthrow" "+jump;-attack"
-alias "-jumpthrow" "-jump"
-bind "q" "+jumpthrow"
-
-bind "i" "say What's Up Ladies!!!"
-
-//Toggle Voice On and Off
-alias voiceon "+voicerecord; bind u voiceoff; echo "Damage Given Voice_Toggle_On""
-alias voiceoff "-voicerecord; bind u voiceon; echo "Damage Given Voice_Toggle_Off""
-bind u voiceon
-bind alt +voicerecord
-bind "INS" "toggle voice_enable 0 1"
-
-//Toggle Bomb Defuse
-//alias "defuseon" "+use; bind CAPSLOCK defuseoff; echo "Damage Given Defuse_Hold_On""
-//alias "defuseoff" "-use; bind CAPSLOCK defuseon; echo "Damage Given Defuse_Hold_Off""
-//defuseoff
-//bind "CAPSLOCK" "defuseon"
-
-//Toggle B-Hop Scroll
-// alias bhopscroll "bind MWHEELDOWN +jump; bind MWHEELUP +jump; bind MOUSE3 weapscroll; echo "Damage Given Bhop_Scroll_On""
-// alias weapscroll "bind MWHEELDOWN invnext; bind MWHEELUP invprev; bind MOUSE3 bhopscroll; echo "Damage Given Bhop_Scroll_Off""
-// bind "MOUSE3" "weapscroll" 
-
-
-//Display Damage Text On Screen
-// developer 1
-// con_enable 1
-// con_filter_enable 2
-// alias showdamage "con_filter_text Damage"
-// showdamage
-// con_filter_text_out Player:
-
-//Cum Bind
-
-Bomb Timer Bind:
-alias "25s" "sndplaydelay 14 ui/beep07"
-alias "20s" "sndplaydelay 19 ui/beep07"
-alias "15s" "sndplaydelay 24 buttons/blip2"
-alias "10s" "sndplaydelay 29 buttons/blip2"
-alias "5s" "sndplaydelay 34 ui/beep22"
-alias "bombtimer" "25s;20s;15s;10s;5s"
-bind "[" "bombtimer"
-
-//Practice Commands
-//alias yeet "sv_cheats 1; mp_limitteams 0; mp_autoteambalance 0; mp_roundtime 60; mp_roundtime_defuse 60; mp_roundtime_hostage 60; mp_maxmoney 60000; mp_startmoney 60000; mp_freezetime 0; mp_buytime 9999; mp_buy_anywhere 1; mp_respawn_on_death_ct 1; mp_respawn_on_death_t 1; sv_infinite_ammo 1; ammo_grenade_limit_total 5; mp_warmup_end; sv_grenade_trajectory 1; sv_grenade_trajectory_time 10; sv_grenade_trajectory_dash 1; sv_grenade_trajectory_thickness 1; sv_showimpacts 0; sv_showimpacts_time 10; mp_drop_knife_enable 0; mp_restartgame 1"
-
-//Practice Binds
-bind "," "bot_add_t"
-bind "." "bot_add_ct"
-bind "-" "bot_kick"
-bind "]" "toggle bot_stop 0 1"
-bind "\" "noclip"
-alias "impacts" "toggle sv_showimpacts 0 1"
-bind "n" "impacts"
-bind "'" "toggle sv_showimpacts_penetration 0 1"
-bind "RCTRL" "bot_place"
-bind "RSHIFT" "toggle host_timescale 1.0 4.0"
-bind "RALT" "sv_rethrow_last_grenade"
-bind "t" "cl_sim_grenade_trajectory 10"
-bind "/" "toggle bot_crouch 0 1"
-
-
-//Map Aliases/Settings
-alias aim "map workshop\243702660\aim_botz"
-alias yeet "exec practice"
-alias flick "map workshop\213240871\training_aim_csgo2"
-alias recoil "map workshop\419404847\recoil_mastere"
-alias pistol "map aimtraindriving_sf custom"
+/////// Old Map Aliases
 // alias "casual" "game_type 0; game_mode 0"
 // alias "comp" "game_type 0; game_mode 1"
 // alias "wingman" "game_type 0; game_mode 2"
@@ -279,66 +361,28 @@ alias pistol "map aimtraindriving_sf custom"
 // alias "nuke" "map de_nuke"
 // alias "inferno" "map de_inferno"
 
+//Buy Binds -- need a keypad to use these
+// bind "kp_end" "buy decoy"
+// bind "kp_downarrow" "buy flashbang"
+// bind "kp_pgdn" "buy smokegrenade"
+// bind "kp_leftarrow" "buy deagle"
+// bind "kp_5" "buy fiveseven; buy tec9; buy cz75"
+// bind "kp_rightarrow" "buy p250"
+// bind "kp_home" "buy m4a1; buy m4a1-s; buy ak47"
+// bind "kp_uparrow" "buy ssg08"
+// bind "kp_pgup" "buy awp"
+// bind "kp_ins" "buy vest"
+// bind "kp_del" "buy vesthelm"
+// bind "kp_plus" "buy hegrenade"
+// bind "kp_minus" "buy molotov; buy incgrenade"
+// bind "kp_enter" "buy defuser"
+// bind "numlock" "buy mp9; buy mac10"
+// bind "kp_multiply" "buy famas; buy galilar"
+// bind "kp_slash" "buy ump45"
+// bind "uparrow" "buy mp7"
+// bind "downarrow" "buy aug; buy sg556"
+// bind "leftarrow" "buy g3sg1; buy scar20"
+// bind "rightarrow" "buy mag7; buy sawedoff"
 
-//Crosshair Stuff
-//alias "c1" "exec crosshair1; bind l c2"
-//alias "c2" "exec crosshair2; bind l c3"
-//alias "c3" "exec crosshair3; bind l c4"
-//alias "c4" "exec crosshair4; bind l c5"
-//alias "c5" "exec crosshair5, bind l onlydot"
-//alias "onlydot" "exec dotcrosshair; bind l c1" 
-//alias "tarik" "exec crosshair_Tarik; bind k boltz"
-// "boltz" "exec crosshair_Boltz; bind k nifty"
-//alias "nifty" "exec crosshair_Nifty; bind k niko"
-//alias "niko" "exec crosshair_NiKo; bind k olof"
-//alias "olof" "exec crosshair_Olof; bind k simple"
-//alias "simple" "exec crosshair_S1mple; bind k nothing"
-//alias "nothing" "exec crosshair_N0thing; bind k steel"
-//alias "steel" "exec crosshair_Steel; bind k jasonr"
-//alias "jasonr" "exec crosshair_JasonR; bind k tarik"
-//bind "l" "c1"
-//bind "k" "tarik"
-//alias "dot" "toggle cl_crosshairdot 0 1"
-//bind "m" "dot"
-//alias "simple2" "exec simplev2"
-//alias "crosshairthings1" "exec fullscreencross; bind l crosshairthings2"
-//alias "crosshairthings2" "exec crosshair_JasonR; cl_crosshairsize 1; bind l crosshairthings1"
-//exec crosshair_moddedboombl4
-
-// My current crosshair
-
-
-
-
-
-// Demo Aliases
-alias listdudes "mirv_listentities isPlayer=1"
-bind "F5" "+ffw"
-alias "+ffw" "demo_timescale 3"
-alias "-ffw" "demo_timescale 1"
-bind "F6" "+ffw3"
-alias "+ffw3" "demo_timescale 20; volume 0"
-alias "-ffw3" "demo_timescale 1; volume 0.1"
-bind "F7" "demo_togglepause"
-
-//Other Random Aliases
-alias "ex" "exec autoexec"
-bind "F3" "ex"
-alias "disc" "disconnect"
-bind "f9" "say ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽﷽ ﷽ ﷽﷽ ﷽﷽﷽ ﷽﷽"
-cl_autowepswitch 0 
-mirv_listentities isPlayer=1
-
-echo "Whats up ladies!!!"
-say "What's Up Ladies!!!"
-host_writeconfig
-
-
-// Other Crosshairs:
-//interz (This is the one that I use): CSGO-mYOzQ-Yy7jO-GRS36-rwFGZ-4fWjM 
-//Old Boombl4: cl_crosshair_drawoutline "0"; cl_crosshair_outlinethickness "1"; cl_crosshair_sniper_show_normal_inaccuracy "0"; cl_crosshair_sniper_width "1"; cl_crosshair_t "0"; cl_crosshairalpha "255"; cl_crosshaircolor "5"; cl_crosshaircolor_b "255"; cl_crosshaircolor_g "210.143723"; cl_crosshaircolor_r "0.000000"; cl_crosshairdot "0"; cl_crosshairgap "-3"; cl_crosshairgap_useweaponvalue "0"; cl_crosshairsize "1"; cl_crosshairstyle "4"; cl_crosshairthickness "0"; cl_crosshairusealpha "1"
-//
-//
-//
 
 
